# QIR-to-Qiskit-Translator

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
docs/: changelog.md  contact.md  index.md
docs/api/: mqss_qir_py_elements.md  mqss_qir_py_regex.md  mqss_qir_py_translate.md  mqss_qir_py_visitor.md
docs/css/: extra.css
docs/user_guide/: development_guide.md  getting_started.md
examples/: BasicBench.py  MQTBench.py  PyqirBench.py  QASMBench.py
examples/resources/BasicBench/: all_gates.bc  all_gates.ll  bell_state.bc  bell_state.ll  loop_input.bc  loop_input.ll  loop_unrolling.bc  loop_unrolling.ll
examples/resources/MQTBench/ae/: ae_indep_qiskit_10.bc  ae_indep_qiskit_10.ll  ae_indep_qiskit_100.bc  ae_indep_qiskit_100.ll  ae_indep_qiskit_101.bc  ae_indep_qiskit_101.ll  ae_indep_qiskit_102.bc  ae_indep_qiskit_102.ll  ae_indep_qiskit_103.bc  ae_indep_qiskit_103.ll  ae_indep_qiskit_104.bc  ae_indep_qiskit_104.ll  ae_indep_qiskit_105.bc  (+245 more)
examples/resources/PyqirBench/: if_then.bc  nested_blocks.bc  test_empty_false_block.bc  test_if_empty_blocks.bc
hpcqc/: __init__.py
hpcqc/qir_qiskit/: elements.py  qis.py  regex.py  translate.py  verifier.py  visitor.py
mqss/: __init__.py
mqss/qir_qiskit/: elements.py  qis.py  regex.py  translate.py  transpile.py
mqss/qirpy/: __init__.py  elements.py  regex.py  translate.py  visitor.py
test/: test.py  test_qir_qiskit.py
test/resources/QASMBench/: qft_n4.qasm
(+3938 files in other folders)
